ProfileBasicAuthControllerTest done